--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A 2D minecraft-like game",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
+    "typecheck": "tsc --watch --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Samuel Degueldre",
