--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "typecheck": "tsc --watch --noEmit",
+    "typecheck": "tsc --watch --noEmit"
   },
   "author": "Samuel Degueldre",
   "license": "ISC",
